# frontman

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
frontman/: __main__.py  main.py  process.py  provider.py  schema.py
src/frontman/: __main__.py  download.py  main.py  process.py  provider.py  result.py  schema.py
test/: frontman.json  invalid-package.json  invalid-schema.json  test_cli.py  test_download.py  test_process.py  test_provider.py
