[tool.poetry]
name = "frontman"
version = "0.2.0"
description = "Frontend Library Manager"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/livioribeiro/frontman"
packages = [
    { include = "frontman", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
pydantic = "^1.7.3"
typer = { version = "^0.3.2", extras = ["all"] }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.800"

[tool.poetry.scripts]
frontman = 'frontman.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
