[tool.poetry]
name = "frontman"
version = "0.3.0"
description = "Frontend Library Manager"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/livioribeiro/frontman"
packages = [
    { include = "frontman", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
pydantic = "^1.7.4"
typer = { version = "^0.4.1", extras = ["all"] }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^4.0.1"
mypy = "^0.942"

[tool.poetry.scripts]
frontman = 'frontman.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
