[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "frontman"
version = "0.3.1"
description = "Frontend Library Manager"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/livioribeiro/frontman"
packages = [
    { include = "frontman", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
pydantic = "^1.9.1"
typer = { version = "^0.5.0", extras = ["all"] }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
types-requests = "^2.28.0"

[tool.poetry.scripts]
frontman = 'frontman.main:app'
